syntax = "proto3";

message User {
  string id = 1;
  string external_id = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  bool active = 6;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message FindUsersRequest {
  repeated string ids = 1;
}
message FindUsersResponse {
  repeated User user = 1;
}

message UserInfoRequest {
  string id = 1;
}

message UserInfoResponse {
  User user = 1;
}

message FindUserByExternalIDRequest {
  string external_id = 1;
}

message FindUserByExternalIDResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}


service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
  rpc FindUsers(FindUsersRequest) returns (FindUsersResponse){}
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse){}
  rpc FindUserByExternalID(FindUserByExternalIDRequest) returns (FindUserByExternalIDResponse){}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){}
}